--- a/(00) Data Visualization Data ISPU.ipynb
+++ b/(00) Data Visualization Data ISPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pembacaan File Data Polusi Udara ISPU Excel\n",
-    "DKI1 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI1\")\n",
-    "DKI2 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI2\")\n",
-    "DKI3 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI3\")\n",
-    "DKI4 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI4\")\n",
-    "DKI5 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI5\")"
+    "DKI1 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI1\")\n",
+    "DKI2 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI2\")\n",
+    "DKI3 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI3\")\n",
+    "DKI4 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI4\")\n",
+    "DKI5 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\DATA ISPU.xlsx\", sheet_name=\"DKI5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "19            BAIK  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "Name: Tanggal, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: Tanggal, Length: 2191, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,16 +491,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x29a56a79710>]"
+       "[<matplotlib.lines.Line2D at 0x229b03eaf90>]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
