--- a/(1.2) Data Visualization Data ISPU-Impute.ipynb
+++ b/(1.2) Data Visualization Data ISPU-Impute.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pembacaan File Data Polusi Udara ISPU Excel\n",
-    "DKI1 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI1\")\n",
-    "DKI2 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI2\")\n",
-    "DKI3 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI3\")\n",
-    "DKI4 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI4\")\n",
-    "DKI5 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI5\")"
+    "DKI1 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI1\")\n",
+    "DKI2 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI2\")\n",
+    "DKI3 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI3\")\n",
+    "DKI4 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI4\")\n",
+    "DKI5 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "19   1.000000  18.000000     PM10            BAIK  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "Name: Tanggal, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "Name: Tanggal, Length: 2191, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,16 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c3d15e5750>]"
+       "[<matplotlib.lines.Line2D at 0x11fce8a42d0>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
