--- a/(2) Data Normalization.ipynb
+++ b/(2) Data Normalization.ipynb
@@ -20,11 +20,11 @@
    "outputs": [],
    "source": [
     "# Pembacaan File Data Polusi Udara ISPU Excel\n",
-    "DKI1 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI1\")\n",
-    "DKI2 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI2\")\n",
-    "DKI3 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI3\")\n",
-    "DKI4 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI4\")\n",
-    "DKI5 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-TA\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI5\")"
+    "DKI1 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI1\")\n",
+    "DKI2 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI2\")\n",
+    "DKI3 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI3\")\n",
+    "DKI4 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI4\")\n",
+    "DKI5 = pd.read_excel(\"D:\\Data\\Kuliah\\TA\\Projek-Capstone-Design\\DATA\\Imputer\\DATA ISPU - Impute.xlsx\", sheet_name=\"DKI5\")"
    ]
   },
   {
@@ -449,11 +449,11 @@
    "outputs": [],
    "source": [
     "# Penyimpanan data yang sudah normalisasi ke dalam file csv\n",
-    "DKI1_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DKI1_Normalization.csv')\n",
-    "DKI2_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DKI2_Normalization.csv')\n",
-    "DKI3_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DKI3_Normalization.csv')\n",
-    "DKI4_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DKI4_Normalization.csv')\n",
-    "DKI5_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DKI5_Normalization.csv')"
+    "DKI1_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DKI1_Normalization.csv')\n",
+    "DKI2_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DKI2_Normalization.csv')\n",
+    "DKI3_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DKI3_Normalization.csv')\n",
+    "DKI4_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DKI4_Normalization.csv')\n",
+    "DKI5_Normalization.to_csv('D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DKI5_Normalization.csv')"
    ]
   }
  ],
