--- a/(3) Data Visualization (Normalization ver.).ipynb
+++ b/(3) Data Visualization (Normalization ver.).ipynb
@@ -15,21 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pembacaan File Data Polusi Udara ISPU Excel\n",
-    "DKI1 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI1\")\n",
-    "DKI2 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI2\")\n",
-    "DKI3 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI3\")\n",
-    "DKI4 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI4\")\n",
-    "DKI5 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-TA/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI5\")"
+    "DKI1 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI1\")\n",
+    "DKI2 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI2\")\n",
+    "DKI3 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI3\")\n",
+    "DKI4 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI4\")\n",
+    "DKI5 = pd.read_excel(\"D:/Data/Kuliah/TA/Projek-Capstone-Design/DATA/Normalization/DATA ISPU - Normalization.xlsx\", sheet_name=\"DKI5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4  0.012821  0.139896      SO2     BAIK  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "Name: Tanggal, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "Name: Tanggal, Length: 2191, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,16 +257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b257f9a1d0>]"
+       "[<matplotlib.lines.Line2D at 0x285dc041490>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
